# organizer

./: .gitignore  LICENSE  README.md  pyproject.toml  request.json  setup.py
organizer/: __init__.py  __main__.py  ai_service.py  cli.py  config.py  config_handler.py  core.py  organize_outdated.py  prompts.py  utils.py
scripts/: install_shell.sh  setup_example.sh
tests/: __init__.py  test_basic.py
