[tool.poetry]
name = "organizer"
version = "0.1.0"
description = "AI-powered file organizer CLI tool"
authors = ["AlanSynn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
google-genai = "^1.8.0"
rich = "^13.7.0"
llama-cpp-python = "^0.2.56"
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
organizer = "organizer.cli:main"